src/App.css
#root {
  background-color: var(--pale-purple);
  width: var(--phone-width);
  height: var(--phone-height);
  display: block;
  position: fixed;
  overflow-y: auto;
  scrollbar-width: none; /* hides scrollbar */
  -ms-overflow-style: none; /* hides scrollbar in IE 10+ */
}

/* For Webkit browsers (Chrome, Safari) */
#root::-webkit-scrollbar {
  width: 0px;
  background: transparent; /* optional, just makes it invisible */
}

/* Purple background for the entire phone screen */
#root::before {
  content: '';
  width: var(--phone-width);
  height: var(--phone-height);
  background-color: var(--pale-purple);
  position: fixed;
  top: var(--phone-black-vertical-padding);
  left: var(--phone-black-horizontal-padding);
  overflow-y: auto;
}

.header {
  position: fixed;
  top: var(--phone-black-vertical-padding);
  display: flex;
  width: var(--phone-width);
  background-color: var(--pale-purple);
  padding: 18px 18px 8px;
  z-index: 99;
}

.header h1.page-title {
  font-weight: 400;
  line-height: 20px;
  font-size: 20px;
  margin-right: 16px;
  margin-top: 4px;
}

.header .corner-coverings {
  position: absolute;
  width: calc(100% - 36px);
  top: 52.5px;
  display: flex;
  justify-content: space-between;
}

.header .corner-coverings .corner {
  width: 16px;
  height: auto;
}

.notes-list {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 8px 18px 18px;
  padding-top: calc(51px + 8px); /* offset header */
  padding-bottom: calc(78px + 18px); /* offset nav */
  min-height: var(--phone-height);
  height: fit-content;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}

#screen-overlay {
  position: fixed;
  top: var(--phone-black-vertical-padding);
  right: var(--phone-black-horizontal-padding);
  width: var(--phone-width);
  height: var(--phone-height);
  background: white;
  opacity: 30%;
  display: none;
}

